--- a/app/assets/templates/comments/show.jst.ejs
+++ b/app/assets/templates/comments/show.jst.ejs
@@ -1,8 +1,8 @@
 <li style="list-style:none">
   <div class="voteside">
-    <div class="upvote"></div>
-    <div><%= comment.escape('com_vote_count') %></div>
-    <div class="downvote"></div>
+    <div class="upvotecom"></div>
+    <div class="votecount"><%= comment.escape('com_vote_count') %></div>
+    <div class="downvotecom"></div>
   </div>
 
   <div class="comm-body"><%= comment.escape("body")%></div>
