--- a/app/assets/templates/posts/show.jst.ejs
+++ b/app/assets/templates/posts/show.jst.ejs
@@ -5,7 +5,7 @@
 
       <div class="midcol">
         <div class="upvote" data-id="<%= post.id %>"></div>
-        <p class="votecount"><%= post.escape("vote_count") %></p>
+        <div class="votecount"><%= post.escape("vote_count") %></div>
         <div class="downvote" data-id="<%= post.id %>"></div>
       </div>
 
