--- a/app/assets/stylesheets/subreddits.css.scss
+++ b/app/assets/stylesheets/subreddits.css.scss
@@ -41,6 +41,7 @@
   float: right;
   background-color: white;
   margin: 200px 5px 0 5px;
+  padding-top: 20px;
   width: 300px;
   display: block;
 }
