--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
         <li> <a class="animated zoomIn" href="#/subreddits/3">Awwww</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits/4">Roboz</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits/5">BreadTelepathy</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/6">Funny</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits">All</a> </li>
       </ul>
       <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bay.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
