--- a/app/assets/templates/subreddits/form.jst.ejs
+++ b/app/assets/templates/subreddits/form.jst.ejs
@@ -1,22 +1,24 @@
-<h1 class="create_sub">Create a subreddit</h1>
+<div class="create_sub_div">
+  <h3 class="create_sub">create a subreddit</h3>
 
 
-<div class="spacer">
-  <div class="roundfield">
-    <span class="p-title">name</span>
-    <div class="roundfield-content">
-      <input class="inp" type="text" name="subreddit[name]" id="sub_name" value="<%= subreddit.escape('name') %>">
+  <div class="spacer">
+    <div class="roundfield">
+      <span class="p-title">name</span>
+      <div class="roundfield-content">
+        <input class="inp" type="text" name="subreddit[name]" id="sub_name" value="<%= subreddit.escape('name') %>">
+      </div>
     </div>
   </div>
-</div>
 
-<div class="spacer">
-  <div class="roundfield">
-    <span class="p-title">description</span>
-    <div class="roundfield-content">
-      <textarea class="inp" name="subreddit[description]" id="sub_description" value="<%= subreddit.escape('description') %>"></textarea>
+  <div class="spacer">
+    <div class="roundfield">
+      <span class="p-title">description</span>
+      <div class="roundfield-content">
+        <textarea class="inp" name="subreddit[description]" id="sub_description" value="<%= subreddit.escape('description') %>"></textarea>
+      </div>
     </div>
   </div>
-</div>
 
-<button>Bake the SubBreddit</button>
+  <button class="bake pulse animated rotateIn">bake subreddit</button>
+</div>
