--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>breddit: the front page of the bakery</title>
-  <link rel="icon" href="//www.redditstatic.com/icon.png" sizes="256x256" type="image/png">
+  <link rel="icon" href="http://img4.wikia.nocookie.net/__cb20120914190104/mysingingmonsters/images/e/e1/Bread.png" sizes="256x256" type="image/png">
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
@@ -17,9 +17,10 @@
         <li> <a class="animated zoomIn" href="#/subreddits/4">Roboz</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits/5">BreadTelepathy</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits/6">Funny</a> - </li>
+        <li> <a class="animated zoomIn" href="#/subreddits/7">Appacademy</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits">All</a> </li>
       </ul>
-      <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bay.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
+      <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bread_cat.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
       <ul class="tabmenu">
         <li class="selected">
           <a href="" class="choice">hot</a>
