--- a/app/assets/templates/posts/index.jst.ejs
+++ b/app/assets/templates/posts/index.jst.ejs
@@ -18,7 +18,7 @@
             </a>
 
             <div class="entry">
-              <a href="<%= post.escape("url")%>" target="_blank">
+              <a class="hvr-pulse-shrink" href="<%= post.escape("url")%>" target="_blank">
                 <p class="title"><%= post.escape("title") %></p>
               </a>
 
