--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <li> <a class="animated zoomIn" href="#/subreddits/7">Appacademy</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits">All</a> </li>
       </ul>
-      <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bread_cat.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
+      <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bay.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
       <ul class="tabmenu">
         <li class="selected">
           <a href="" class="choice">hot</a>
