--- a/app/assets/templates/comments/show.jst.ejs
+++ b/app/assets/templates/comments/show.jst.ejs
@@ -6,12 +6,11 @@
   </div>
 
   <div class="comm-body"><%= comment.escape("body")%></div>
-  <div class="infoline"><a href=""><%= comment.get("author") %></a> about <%= comment.get("time_ago")%> ago</div>
+  <div class="infoline">by <a href=""><%= comment.get("author") %></a> about <%= comment.get("time_ago")%> ago</div>
 
     <% if (comment.escape('owns_comment') === 'true') { %>
       <div class="destroy-comment">delete</div>
     <% }; %>
-      <div class="comment-reply">reply</div>
 
   <div class="comment-form-wrapper"></div>
 
