--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -62,6 +62,15 @@ ul.subs-head li a:link {
   font: bold verdana,arial,helvetica,sans-serif;
 }
 
+.tabmenu li span {
+  padding: 2px 6px 0 6px;
+  text-decoration: none;
+  text-color: #369;
+  background-color: #eff7ff;
+  border-bottom: 1px solid #5f99cf;
+  font: bold verdana,arial,helvetica,sans-serif;
+}
+
 .tabmenu li.selected a {
   padding: 2px 6px 0 6px;
   color: orangered;
