--- a/app/assets/templates/messages/show.jst.ejs
+++ b/app/assets/templates/messages/show.jst.ejs
@@ -63,22 +63,11 @@
   <div class="message">
     <p class="msg-subject">
       <span>comment reply</span>
-      <a href="" class="msg-title">I am stuck outside</a>
-    </p>
-    <p class="msg-tagline"> from <a href="">Varun</a> via <a href="">appacademy</a> sent 30 days ago</p>
-    <div class="md-container">
-      <p class="md-p">Hey man I'm stuck in the elevator.</p>
-    </div>
-  </div>
-
-  <div class="message">
-    <p class="msg-subject">
-      <span>comment reply</span>
       <a href="" class="msg-title">How to get a nice cross-stich pattern with only 1 color</a>
     </p>
     <p class="msg-tagline"> from <a href="">SAMUEL_L_JACKSON</a> via <a href="">embroidery</a> sent 30 days ago</p>
     <div class="md-container">
-      <p class="md-p">TWO DIMENSIONAL CROSS-STITCH IN FLORAL AND GEOMETRIC PATTERNS. USUALLY WITH RED AND BLACK COTTON FLOSS ON LINEN. M***AF***A!</p>
+      <p class="md-p">TWO DIMENSIONAL CROSS-STITCH IN FLORAL AND GEOMETRIC PATTERNS. USUALLY WITH RED AND BLACK COTTON FLOSS ON LINEN.</p>
     </div>
   </div>
 
