--- a/app/assets/templates/posts/indexsingle.jst.ejs
+++ b/app/assets/templates/posts/indexsingle.jst.ejs
@@ -1,24 +1,23 @@
-<span class="page-name"><%= subreddit.escape("name") %></span>
 
-<div class="side">
-  <h1><%= subreddit.escape("name") %></h1>
-    <p><%= subreddit.escape("description") %></p>
-</div>
-
-
-<div class="content">
-  <div class="spacer">
     <div id="siteTable" class="sitetable">
-      <% posts.each(function (post) { %>
-        <% if (post.get('sub_id') === subreddit.id){ %>
           <div class="link">
 
             <span class="rank"></span>
 
             <div class="midcol">
-              <div class="upvote" data-id="<%= post.id %>"></div>
+              <% if (post.escape('up_voted') === 'true') { %>
+                <div class="upvoted"></div>
+              <% } else { %>
+                <div class="upvote"></div>
+              <% } %>
+
               <div class="votecount"><%= post.escape("vote_count") %></div>
-              <div class="downvote" data-id="<%= post.id %>"></div>
+              
+              <% if (post.escape('up_voted') === 'false') { %>
+                <div class="downvoted"></div>
+              <% } else { %>
+                <div class="downvote" data-id="<%= post.id %>"></div>
+              <% } %>
             </div>
 
             <a class="thumbnail" href="<%= post.escape("url")%>" target="_blank">
@@ -37,9 +36,6 @@
                 <a class="share" href="">share</a>
               </p>
             </div>
+
           </div>
-          <% } %>
-        <% }); %>
-      </div>
     </div>
-  </div>
