--- a/app/assets/stylesheets/subscriptions.css.scss
+++ b/app/assets/stylesheets/subscriptions.css.scss
@@ -2,31 +2,29 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.sub-button {
-  border: 1px solid #444;
-  background: #ffffff none repeat-x scroll center left;
-  color: white;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 20px;
-  border-radius: 3px;
+// .sub-button {
+//   border: 1px solid #444;
+//   background: #ffffff none repeat-x scroll center left;
+//   color: white;
+//   font-size: 12px;
+//   font-weight: bold;
+//   line-height: 20px;
+//   border-radius: 3px;
+//   cursor: pointer;
+// }
+
+.sub-option {
+  background-image: url('https://s3.amazonaws.com/bredditapp/subscribe.png');
+  display: inline-block;
+  width: 70px;
+  height: 20px;
   cursor: pointer;
 }
 
-.sub-option {
-  background-image: url('https://s3.amazonaws.com/bredditapp/sprite-reddit.png');
-  background-position: 0px 0px;
-  background-repeat: repeat;
-  width: 68px;
-  height: 20;
-  font-color: white;
-}
-
 .unsub-option {
-  background-image: url('https://s3.amazonaws.com/bredditapp/sprite-reddit.png');
-  background-position: 0px -182px;
-  background-repeat: repeat;
-  width: 68px;
-  height: 20;
-  font-color: white;
+  background-image: url('https://s3.amazonaws.com/bredditapp/unsubscribe.png');
+  display: inline-block;
+  width: 83px;
+  height: 20px;
+  cursor: pointer;
 }
