--- a/app/assets/templates/subreddits/show.jst.ejs
+++ b/app/assets/templates/subreddits/show.jst.ejs
@@ -1,4 +1,8 @@
 <span class="page-name"><%= subreddit.escape("name") %></span>
+<br>
+<br>
+<ul class='posts'>
+</ul>
 
 <div class="side">
   <h1><%= subreddit.escape("name") %></h1>
