--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -140,6 +140,7 @@ div.sidebox{
   background-color: white;
   z-index: 1;
   min-height: 100%;
+  min-width: 100%;
 }
 
 .morelink {
@@ -156,6 +157,7 @@ div.sidebox{
   letter-spacing: -1px;
   line-height: 29px;
   height: 31px;
+  width: 300px;
 }
 
 .morelink a {
