--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
         <li> <a class="animated zoomIn" href="#/subreddits/7">Appacademy</a> - </li>
         <li> <a class="animated zoomIn" href="#/subreddits">All</a> </li>
       </ul>
-      <a href="www.breddit.io" style="color:black;text-decoration:none"><img class="bay" src="/bay.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
+      <a href="/#" style="color:black;text-decoration:none"><img class="bay" src="/bay.jpg" alt="baymax" style="width:28px;height:28px;margin-left:10px"><span class="breddit">breddit</span></a>
       <ul class="tabmenu">
         <li class="selected">
           <a href="" class="choice">hot</a>
@@ -61,15 +61,12 @@
   </div>
 
   <div class="right-nav">
-      <div class="spacer">
-        <form id="search" role="search">
-          <input id="search-input" type="text" name="q" placeholder="search" tabindex="20">
-        </form>
-      </div>
+      <br>
+      <br>
 
       <div class="spacer">
         <div class="morelink">
-          <a class= "create-bar" href="#/posts/new">Submit a new link</a>
+          <a class="create-bar" href="#/posts/new">Submit a new link</a>
           <div class="nub"></div>
         </div>
       </div>
@@ -83,7 +80,7 @@
 
       <div class="spacer">
         <div class="morelink">
-          <a class= "create-bar" href="#/subreddits/new">Create your own subreddit</a>
+          <a class="create-bar" href="#/subreddits/new">Create your own subreddit</a>
           <div class="nub"></div>
         </div>
       </div>
