--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -21,6 +21,8 @@
       </form>
 
 
-      <h4 style="padding-left:10px">Please create a new account.</h4>
+      <h4 style="padding-left:10px">Please create a new account.
+        <a href="<%=new_session_url%>">Or Login</a>
+      </h4>
     </div>
   </div>
